--- a/TrabajoPractico3/Views/Shared/_Layout.cshtml
+++ b/TrabajoPractico3/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cadetes" asp-action="AltaCadete">Crear Cadete</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cadetes" asp-action="Index">Cadetes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pedidos" asp-action="AltaPedido">Crear Pedido</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pedidos" asp-action="Index">Pedidos</a>
                         </li>
 
                     </ul>
