--- a/TrabajoPractico3/Views/Cadetes/AltaCadete.cshtml
+++ b/TrabajoPractico3/Views/Cadetes/AltaCadete.cshtml
@@ -1,11 +1,11 @@
 ﻿
 @{
-    ViewData["Title"] = "AltaCadete";
+    ViewData["Title"] = "Crear Cadete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <section class="section-padding mx-auto seccion-form">
-    <form method="post" class="mx-auto form-login" asp-controller="Cadetes" asp-action="AltaCadete">
+    <form method="post" class="mx-auto form-login" asp-action="AltaCadete">
         <h2 class="mb-5 text-center" id="">Nuevo Cadete</h2>
         <div class="input-group">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-user">Nombre</i></span>
