--- a/TrabajoPractico3/Views/Pedidos/AltaPedido.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/AltaPedido.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<TrabajoPractico3.Models.Cadeteria>
 @{
     ViewData["Title"] = "AltaPedidos";
     Layout = "~/Views/Shared/_Layout.cshtml";
