--- a/TrabajoPractico3/Views/Pedidos/Index.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Listado de cadetes";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Listado de Pedidos";
 }
-@model List<TrabajoPractico3.Models.Pedido>
+@model List<TrabajoPractico3.Models.Pedido> 
 
 <div class="container">
 
@@ -11,42 +10,44 @@
             <h3>Listado de Pedidos</h3>
         </div>
         <div class="col-sm-6">
-            <a class="btn btn-success d-block" asp-action="AltaPedido" asp-controller="Pedidos">Crear Pedido</a>
+            <a class="btn btn-success d-block" asp-action="CreatePedido" asp-controller="Pedidos">Crear Pedido</a>
         </div>
 
         <div class="row">
-            @if (Model.Count() > 0)
-            {
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <td>Nro de pedido</td>
-                            <td>Observacion</td>
-                            <td>Estado</td>
-                            <td>Nombre del cliente</td>
-                            <td>Accion</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+            
+                @if (Model.Count() > 0)
+                {
+                    <table class="table table-bordered table-striped">
+                        <thead>
                             <tr>
-                                <td>@item.Numero</td>
-                                <td>@item.Obs</td>
-                                <td>@item.Estado</td>
-                                <td>@item.Cliente.Nombre</td>
-                                <td>
-                                    <a asp-controller="Pedidos" asp-action="Borrar" asp-route-id="@item.Numero">Eliminar</a>
-                                </td>
+                                <td>Nro de pedido</td>
+                                <td>Observacion</td>
+                                <td>Estado</td>
+                                <td>Nombre del cliente</td>
+                                <td>Accion</td>
                             </tr>
-                        }
-                    </tbody>
-                </table>
-            }
-            else
-            {
-                <p>No existen registros</p>
-            }
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.Numero</td>
+                                    <td>@item.Obs</td>
+                                    <td>@item.Estado</td>
+                                    <td>@item.Cliente.Nombre</td>
+                                    <td>
+                                        <a asp-controller="Pedidos" asp-action="Borrar" asp-route-id="@item.Numero" class="btn btn-danger">Eliminar</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                }
+                else
+                {
+                    <p>No existen registros</p>
+                }
+
         </div>
     </div>
 </div>
