--- a/TrabajoPractico3/Views/Cadetes/Index.cshtml
+++ b/TrabajoPractico3/Views/Cadetes/Index.cshtml
@@ -22,7 +22,7 @@
                             <td>Nombre</td>
                             <td>Direccion</td>
                             <td>Telefono</td>
-                            <td>Cantidad de pedidos</td>
+                            <td>Cant de pedidos</td>
                             <td>Accion</td>
                         </tr>
                     </thead>
@@ -36,6 +36,7 @@
                             <td>@item.Telefono</td>
                             <td>@item.Pedidos.Count()</td>
                             <td>
+                                <a asp-controller="Cadetes" asp-action="Modificar" asp-route-id="@item.Id" class="btn btn-warning">Editar</a>
                                 <a asp-controller="Cadetes" asp-action="Borrar" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
                             </td>
                         </tr>
