Funcion modificar pedidos

--- a/TrabajoPractico3/Views/Pedidos/CreatePedido.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/CreatePedido.cshtml
@@ -10,7 +10,7 @@
         <h2 class="mb-5 text-center" id="">Nuevo Pedido</h2>
         <div class="input-group">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-user">Numero de Pedido</i></span>
-            <input type="number" class="form-control" placeholder="Numero de Pedido" aria-label="Numero de Pedido" aria-describedby="basic-addon1" name="numero" required>
+            <input type="number" class="form-control" placeholder="Numero de Pedido" aria-label="Numero de Pedido" aria-describedby="basic-addon1" name="id" required>
         </div>
         <div class="input-group mt-4">
             <span class="input-group-text" id="basic-addon1"><i class="far fa-address-card">Observacion</i></span>
@@ -32,7 +32,7 @@
         </div>
         <div class="input-group mt-4">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-mobile-alt">Teléfono</i></span>
-            <input type="text" class="form-control" placeholder="Telefono" aria-label="Telefono" aria-describedby="basic-addon1" name="telefono" required>
+            <input type="number" class="form-control" placeholder="Telefono" aria-label="Telefono" aria-describedby="basic-addon1" name="telefono" required>
         </div>
 
         <div class="input-group mt-4">
