--- a/TrabajoPractico3/Views/Cadetes/Modificar.cshtml
+++ b/TrabajoPractico3/Views/Cadetes/Modificar.cshtml
@@ -19,8 +19,8 @@
         </div>
         <div class="input-group mt-4">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-mobile-alt">Telefono</i></span>
-            <input type="number" class="form-control" value="@Model.Telefono" placeholder="@Model.Telefono" aria-describedby="basic-addon1" name="telefono" required>
+            <input type="text" class="form-control" value="@Model.Telefono" placeholder="@Model.Telefono" aria-describedby="basic-addon1" name="telefono" required>
         </div>
-        <button class="btn btn-primary w-100 mt-4" type="submit">Añadir Cadete</button>
+        <button class="btn btn-primary w-100 mt-4" type="submit">Modificar</button>
     </form>
 </section>
