--- a/TrabajoPractico3/Views/Cadetes/CreateCadete.cshtml
+++ b/TrabajoPractico3/Views/Cadetes/CreateCadete.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="input-group mt-4">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-mobile-alt">Telefono</i></span>
-            <input type="number" class="form-control" placeholder="Telefono" aria-label="Telefono" aria-describedby="basic-addon1" name="telefono" required>
+            <input type="text" class="form-control" placeholder="Telefono" aria-label="Telefono" aria-describedby="basic-addon1" name="telefono" required>
         </div>
         <button class="btn btn-primary w-100 mt-4" type="submit">Añadir Cadete</button>
     </form>
