--- a/TrabajoPractico3/Views/Pedidos/Modificar.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/Modificar.cshtml
@@ -18,10 +18,9 @@
             <select class="form-control" id="estado" name="estado" value="@Model.Estado.ToString()" required>
                 <option value="@TrabajoPractico3.Models.TipoDeEstados.En_camino">En camino</option>
                 <option value="@TrabajoPractico3.Models.TipoDeEstados.Entregado">Entregado</option>
-                <option value="@TrabajoPractico3.Models.TipoDeEstados.No_Entregado">No entregado</option>
+                <option value="@TrabajoPractico3.Models.TipoDeEstados.No_entregado">No entregado</option>
             </select>
         </div>
-        <input type="hidden" value="@Model.Id_cadete" id="id_cadete" name="id_cadete"/>
 
         <label for="formGroupExampleInput">Datos del Cliente</label>
         <div class="input-group">
