--- a/TrabajoPractico3/Views/Pedidos/CreatePedido.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/CreatePedido.cshtml
@@ -17,7 +17,7 @@
             <select class="form-control" id="estado" name="estado" required>
                 <option value="@TrabajoPractico3.Models.TipoDeEstados.En_camino">En camino</option>
                 <option value="@TrabajoPractico3.Models.TipoDeEstados.Entregado">Entregado</option>
-                <option value="@TrabajoPractico3.Models.TipoDeEstados.No_Entregado">No entregado</option>
+                <option value="@TrabajoPractico3.Models.TipoDeEstados.No_entregado">No entregado</option>
             </select>
         </div><br />
 
