--- a/TrabajoPractico3/Views/Shared/_Layout.cshtml
+++ b/TrabajoPractico3/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pedidos" asp-action="Index">Pedidos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Logn In</a>
+                        </li>
 
                     </ul>
                 </div>
@@ -41,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - TrabajoPractico3 - Silva Araceli</a>
+            &copy; 2021 - TrabajoPractico3 - Silva Araceli
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
