--- a/TrabajoPractico3/Views/Cadetes/CreateCadete.cshtml
+++ b/TrabajoPractico3/Views/Cadetes/CreateCadete.cshtml
@@ -8,19 +8,15 @@
         <h2 class="mb-5 text-center" id="">Nuevo Cadete</h2>
         <div class="input-group">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-user">Nombre Completo</i></span>
-            <input type="text" class="form-control" placeholder="Nombre y apellido" aria-label="Nombre y apellido" aria-describedby="basic-addon1" name="nombre" required>
-        </div>
-        <div class="input-group mt-4">
-            <span class="input-group-text" id="basic-addon1"><i class="fas fa-mobile-alt">DNI</i></span>
-            <input type="number" class="form-control" placeholder="Ingrese DNI" aria-label="Ingrese DNI" aria-describedby="basic-addon1" name="id" required>
+            <input type="text" class="form-control" placeholder="Nombre y apellido" aria-label="Nombre y apellido" aria-describedby="basic-addon1" name="Nombre" required>
         </div>
         <div class="input-group mt-4">
             <span class="input-group-text" id="basic-addon1"><i class="far fa-address-card">Direccion</i></span>
-            <input type="text" class="form-control" placeholder="Direccion" aria-label="Direccion" aria-describedby="basic-addon1" name="direccion" required>
+            <input type="text" class="form-control" placeholder="Direccion" aria-label="Direccion" aria-describedby="basic-addon1" name="Direccion" required>
         </div>
         <div class="input-group mt-4">
             <span class="input-group-text" id="basic-addon1"><i class="fas fa-mobile-alt">Telefono</i></span>
-            <input type="text" class="form-control" placeholder="Telefono" aria-label="Telefono" aria-describedby="basic-addon1" name="telefono" required>
+            <input type="text" class="form-control" placeholder="Telefono" aria-label="Telefono" aria-describedby="basic-addon1" name="Telefono" required>
         </div>
         <button class="btn btn-primary w-100 mt-4" type="submit">Añadir Cadete</button>
     </form>
