--- a/TrabajoPractico3/Views/Cadetes/Index.cshtml
+++ b/TrabajoPractico3/Views/Cadetes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Listado de cadetes";
 }
-@model List<TrabajoPractico3.Models.Cadete>
+@model List<TrabajoPractico3.Models.ViewModels.CadeteViewModel>
 
 <div class="container">
 
