--- a/TrabajoPractico3/Views/Pedidos/CreatePedido.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/CreatePedido.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Crear Pedido";
 }
-@model List<TrabajoPractico3.Models.Cadete> 
+@model List<TrabajoPractico3.Models.ViewModels.CadeteViewModel> 
 
 @if(Model.Count() > 0)
             {
