--- a/TrabajoPractico3/Views/Pedidos/Modificar.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Modificar Pedido";
 }
-@model TrabajoPractico3.Models.Pedido
+@model TrabajoPractico3.Models.ViewModels.PedidoViewModel
 
 <section class="section-padding mx-auto seccion-form">
     <form method="post" class="mx-auto form-login" asp-controller="Pedidos" asp-action="ModificarPedido">
