--- a/TrabajoPractico3/Views/Pedidos/Index.cshtml
+++ b/TrabajoPractico3/Views/Pedidos/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Listado de Pedidos";
 }
-@model List<TrabajoPractico3.Models.Pedido> 
+@model List<TrabajoPractico3.Models.ViewModels.PedidoViewModel> 
 
 <div class="container">
 
