--- a/TrabajoPractico3/Views/Usuarios/CreateUsuario.cshtml
+++ b/TrabajoPractico3/Views/Usuarios/CreateUsuario.cshtml
@@ -8,25 +8,27 @@
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="login-form bg-light mt-4 p-4">
-                <form asp-action="Login" method="post" class="row g-3">
-                    <h4>Bienvenido</h4>
+                <form asp-action="CreateUsuario" method="post" class="row g-3">
+                    <h4>Registrarse</h4>
                     <div class="col-12">
-                        <label>Username</label>
+                        <label>Nombre de Usuario</label>
                         <input type="text" name="nombreUsuario" class="form-control" placeholder="Usuario">
                     </div>
                     <div class="col-12">
-                        <label>Password</label>
+                        <label>Contraseña</label>
                         <input type="password" name="clave" class="form-control" placeholder="Contraseña">
                     </div>
-                    
                     <div class="col-12">
-                        <button type="submit" class="btn btn-dark float-end">Login</button>
+                        <label>Email</label>
+                        <input type="text" name="email" class="form-control" placeholder="Email">
+                    </div>
+
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-dark float-end">Crear</button>
                     </div>
                 </form>
                 <hr class="mt-4">
-                <div class="col-12">
-                    <p class="text-center mb-0">Todavia no tienes una cuenta? <a asp-action="CreateUsuario">Registrarse</a></p>
-                </div>
+                
             </div>
         </div>
     </div>
